# datapipe

./: .env  .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO  app.py  app_streamlit.py  architecture.drawio  changelog.md  docker-compose.yml  ds_memory.py  ds_memory_test.py  filedir_playground.py  goal_v3.py  ozon_products.xml  package.json  pipe.py  playground.ipynb  proc_translate.py  pyproject.toml  requirements.in  requirements.txt  setup.py  simple_pipeline.ipynb  sql_playground.py  src_gfeed.ipynb  src_gfeed.py  test.csv  test.py  test_datatable.py
examples/datapipe_app/: .gitignore  Dockerfile  README.md  alembic.ini  app.py  pyproject.toml
examples/datapipe_app/alembic/: README  env.py
examples/detection_tags/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
examples/detection_tags/detection/: app.py  coco_demo.py  config.py  data.py  steps.py
examples/detection_tags/scripts/: add_request.py  build_cache.py  load_batch.py  repro_fingerprint.py  restore_demo_seed.sh  seed_ops_smoke.py  seed_upload_images.py
examples/e2e_template/: .env.example  .gitignore  README.md  __init__.py  common.py  docker-compose.yml  pyproject.toml
examples/e2e_template/image_classification/: __init__.py  app.py  config.py  data.py  steps.py
examples/e2e_template/image_detection/: __init__.py  app.py  config.py  data.py  demo_observability_seed.py  steps.py
examples/e2e_template/image_keypoints/: .gitignore  __init__.py  app.py  config.py  data.py  steps.py
examples/e2e_template/scripts/: label_studio_token.py  seed_sample_data.py
examples/embedder_fiftyone/: .env.example  .gitignore  README.md  __init__.py  app.py  config.py  data.py  models.py  pyproject.toml  steps.py
examples/ocr/: .env.example  README.md  app.py  config.py  data.py  engines.py  pyproject.toml  steps.py  viz.py
examples/robots_ego_cvat/: .gitignore  README.md  app.py  config.py  pyproject.toml  steps.py
examples/sam_cvat/: .env.example  README.md  __init__.py  app.py  config.py  data.py  pyproject.toml  steps.py
libs/datapipe-app/: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
libs/datapipe-app-ml-ops/: README.md  pyproject.toml
libs/datapipe-app-ml-ops/datapipe_app_ml_ops/: __init__.py  ops_image_records.py  ops_registry_hooks.py  ops_spec_metrics.py  ops_spec_resolve.py  ops_spec_validation.py  ops_specs_service.py  spec_registry.py
libs/datapipe-app-ml-ops/tests/: conftest.py  test_db_schema.py  test_image_visualization.py  test_metrics_candidates.py  test_observability_ml_integration.py  test_ops_filters.py  test_ops_image_records.py  test_ops_specs.py  test_sql_analytics.py
libs/datapipe-app/datapipe_app/: __init__.py  api_v1alpha1.py  api_v1alpha2.py  api_v1alpha3.py  api_v1alpha3_specs.py  cli.py  datapipe_api.py  db_schema.py  errors.py  image_visualization.py  meta_sql.py  metrics.py  models.py  ops_filters.py  ops_image_records.py  ops_query.py  ops_spec_resolve.py  ops_specs_service.py  pipeline_ui.py  settings.py  spec_registry.py  specs.py
libs/datapipe-app/frontend/: .env.local  .rescriptsrc.js  README.md  package.json  tsconfig.json
libs/datapipe-app/tests/: adhoc_tests.http  conftest.py  test_cli_observability.py  test_clickhouse_run_logs.py  test_db_schema.py  test_frontend_static.py  test_image_visualization.py  test_label_graph_containment.py  test_list_runs.py  test_make_run_steps_callable.py  test_metrics_candidates.py  test_observability_finish_run.py  test_observability_ml_integration.py  test_observability_tables.py  test_ops_filters.py  test_ops_image_records.py  test_ops_query.py  test_ops_settings.py  test_ops_spec_resolve.py  test_ops_specs.py  test_run_log_persistence.py  test_run_output_capture.py  test_run_reconciler.py  test_run_recorder_callback.py  test_run_recorder_progress_logs.py  test_run_scope.py  test_schema_safety.py  test_table_data.py  test_v1alpha1.py  test_v1alpha2.py
libs/datapipe-cvat/: Makefile  README.md  black.toml  pyproject.toml
libs/datapipe-cvat/datapipe_cvat/: cvat_step.py  utils.py
libs/datapipe-cvat/tests/: conftest.py  start-cvat.sh  test_cvat_integration.py  test_imports.py  test_simple_project_example.py
libs/datapipe-label-studio/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
libs/datapipe-label-studio/datapipe_label_studio/: create_projects_step.py  sdk_utils.py  types.py  upload_predictions_pipeline.py  upload_tasks_pipeline.py  utils.py
libs/datapipe-label-studio/tests/: .env.example  conftest.py  docker-compose.yml  ls_test_helpers.py  test_pipeline.py  test_pipeline_many_projects.py  test_set_current_model_version.py  util.py
libs/datapipe-ml/: .gitignore  .gitmodules  Makefile  README.md  black.toml  changelog.md  mypy-config.toml  pyproject.toml
libs/datapipe-ml/datapipe_ml/: image_visualization.py  ops_image_records.py  ops_registry_hooks.py  ops_spec_metrics.py  ops_spec_resolve.py  ops_spec_validation.py  ops_specs.py  ops_specs_service.py  spec_registry.py
libs/datapipe-ml/tests/: .env.test  .env.test.local  .env.test.local.example  .gitignore  conftest.py  docker-compose.yml  download_input.py  example_image_pipeline.ipynb  test_app_smoke.py  test_data_generation.py  test_db_schema.py  test_e2e_template_service.py  test_e2e_template_structure.py  test_freeze_datasets.py  test_image_visualization.py  test_inference_keypoints.py  test_inference_model_inputs.py  test_inference_smoke.py  test_keypoints_fields.py  test_metrics_candidates.py  test_metrics_classification.py  test_metrics_detection.py  test_metrics_idx_filter.py  test_metrics_inputs.py  test_metrics_keypoints.py  test_metrics_pipeline.py  test_metrics_subset_required_inputs.py  test_model_selection.py  test_multiprocessing_output.py  (+36 more)
libs/datapipe-ui/: .gitignore  .prettierrc  .rescriptsrc.js  Makefile  README.md  package.json  pyproject.toml  tsconfig.json
libs/datapipe-ui-ml/: .gitignore  .rescriptsrc.js  Makefile  README.md  jest.config.js  package.json  pyproject.toml  tsconfig.json
(+1329 files in other folders)
