[project]
name = "embedder-fiftyone-example"
version = "0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datapipe-ml[torch,fiftyone]",
    "transformers==4.57.6",
    "umap-learn>=0.5",
    "python-dotenv>=1.0",
    "torch==2.6.0", 
    "torchvision==0.21.0",
    "stringzilla==4.4.0"  # needed for albumentations
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
datapipe-ml = { path = "../../libs/datapipe-ml", editable = true }
datapipe-core = { path = "../../libs/datapipe-core", editable = true }
cv-pipeliner = { git = "https://github.com/epoch8/cv-pipeliner", rev = "5724f8d54e4df64013fad85d41129799bc143293" }
