[project]
name = "ocr-example"
version = "0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datapipe-ml[fiftyone]",
    "python-dotenv>=1.0",
    "stringzilla==4.4.0",  # needed for albumentations
    "fiftyone==1.17.0",
    "openai>=1.0",
    "google-genai>=1.0",
    "datasets>=3.0",
    "pydantic>=2.0",
    "torch==2.6.0",  # transitive via cv-pipeliner; pin CPU wheel (not used by OCR)
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
datapipe-ml = { path = "../../libs/datapipe-ml", editable = true }
datapipe-core = { path = "../../libs/datapipe-core", editable = true }
cv-pipeliner = { git = "https://github.com/epoch8/cv-pipeliner", rev = "ef6afaab7694dc6e3c12d507ba38c9e74214958f" }
torch = { index = "pytorch-cpu" }
