[project]
name = "sam-cvat-example"
version = "0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.6.0", 
    "torchvision==0.21.0",
    "setuptools<82",
    "sam3",
    "datapipe-core",
    "datapipe-cvat",
    "python-dotenv",
    "datasets",
    "opencv-python",
    "huggingface-hub==1.20.1",
    "cv-pipeliner",
    "einops",
    "pycocotools",
    "psutil"
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
datapipe-core = { path = "../../libs/datapipe-core", editable = true }
datapipe-cvat = { path = "../../libs/datapipe-cvat", editable = true }
cv-pipeliner = { git = "https://github.com/epoch8/cv-pipeliner", rev = "ef6afaab7694dc6e3c12d507ba38c9e74214958f" }
sam3 = { git = "https://github.com/facebookresearch/sam3.git", rev = "5dd401d1c5c1d5c3eedff06d41b77af824517619" }
