[project]
name = "datapipe-app"
version = "0.6.0"
description = "REST API, debug UI, and CLI extensions for Datapipe pipelines"
authors = [{ name = "Andrey Tatarinov", email = "a@tatarinov.co" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datapipe-core",
    "fastapi>=0.69.0",
    "uvicorn[standard]>=0.17.0",
    "click>=7.1.2",
    "rich>=13.3.2",
    "pydantic-settings>=2.0.0",
    "starlette-exporter",
    "opentelemetry-instrumentation-fastapi>=0.35b0",
]

[project.optional-dependencies]
gcp = ["opentelemetry-exporter-gcp-trace>=1.3.0,<2"]
jaeger = ["opentelemetry-exporter-jaeger>=1.8.0,<2"]

[project.entry-points."datapipe.cli"]
datapipe_app = "datapipe_app.cli:register_commands"

[project.urls]
Repository = "https://github.com/epoch8/datapipe"

[dependency-groups]
dev = [
    "alembic",
    "black",
    "flake8",
    "httpx",
    "mypy",
    "pytest<8",
    "sqlalchemy[mypy]",
]

[tool.uv.sources]
datapipe-core = { workspace = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests", "frontend"]

[tool.hatch.build.targets.wheel]
exclude = ["tests", "frontend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
