[project]
name = "datapipe-cvat"
version = "0.1.0"
description = ""
authors = [
    { name = "Alexander Kozlov", email = "bobokvsky@epoch8.co" },
    { name = "Andrey Tatarinov", email = "a@tatarinov.co" },
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "cvat-sdk>=2.29.0",
    "datapipe-core[gcsfs,s3fs]",
]

[dependency-groups]
dev = [
    "flake8",
    "black",
    "pytest",
    "pytest-xdist",
    "pytest-cases>=3.6.4,<4",
    "mypy",
    "pandas-stubs",
    "types-requests",
    "types-setuptools",
]

[tool.uv.sources]
datapipe-core = { workspace = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests", "experiments"]

[tool.hatch.build.targets.wheel]
exclude = ["tests", "experiments"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
