[project]
name = "datapipe-ui-ml"
version = "0.6.0"
description = "ML UI plugin marker for Datapipe Ops (compiled into datapipe-ui)"
authors = [{ name = "Andrey Tatarinov", email = "a@tatarinov.co" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"

[project.urls]
Repository = "https://github.com/epoch8/datapipe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
