[project]
name = "datapipe-ui"
version = "0.6.0"
description = "Datapipe Ops web UI static assets"
authors = [{ name = "Andrey Tatarinov", email = "a@tatarinov.co" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"

[project.entry-points."datapipe.ui_static"]
datapipe_ui = "datapipe_ui.static:resolve_frontend_dir"

[project.urls]
Repository = "https://github.com/epoch8/datapipe"

[tool.hatch.build.targets.sdist]
exclude = ["node_modules", "build", "src", "public"]

[tool.hatch.build.targets.wheel]
exclude = ["node_modules", "build", "src", "public"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
